Add export/import data functionality and remove day info display

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
                     <p class="empty-state">No exercise logged yet. Tap + Exercise to start!</p>
                 </div>
             </div>
+
+            <!-- Data Management -->
+            <div class="card data-card">
+                <h2 class="card-title"><i class="fas fa-database"></i> Data Management</h2>
+                <div class="data-actions">
+                    <button id="export-data-btn" class="btn-secondary"><i class="fas fa-download"></i> Export Data</button>
+                    <button id="import-data-btn" class="btn-secondary"><i class="fas fa-upload"></i> Import Data</button>
+                </div>
+                <input type="file" id="import-file-input" accept=".json" style="display: none;">
+            </div>
         </div>
 
         <!-- Presets Screen -->
