--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <i class="fas fa-upload"></i> Import Data
                     </label>
                 </div>
-                <input type="file" id="import-file-input" accept=".json" class="hidden">
+                <input type="file" id="import-file-input" accept="application/json,.json" class="hidden">
             </div>
         </div>
 
