Add automatic calorie lookup from USDA food database API

--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
                         <p class="empty-state" id="preset-food-empty">No items added yet</p>
                     </div>
                     <div class="preset-add-item">
-                        <input type="text" id="preset-item-name" placeholder="Item name" autocomplete="on" spellcheck="true" autocorrect="on">
+                        <input type="text" id="preset-item-name" placeholder="e.g., apple, banana, chicken breast" autocomplete="on" spellcheck="true" autocorrect="on">
+                        <button type="button" class="btn-secondary btn-sm" id="lookup-calories-btn" title="Auto-fill calories"><i class="fas fa-search"></i></button>
                         <input type="number" id="preset-item-calories" placeholder="Calories" min="0">
                         <button type="button" class="btn-secondary btn-sm" id="add-preset-item-btn">+ Add</button>
                     </div>
