Make preset Total Calories field editable for manual input

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <!-- Total Calories -->
                 <div class="form-group">
                     <label for="preset-total-calories">Total Calories</label>
-                    <input type="number" id="preset-total-calories" placeholder="0" min="0" readonly>
+                    <input type="number" id="preset-total-calories" placeholder="0" min="0">
                 </div>
                 
                 <div class="form-group">
